--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -60,12 +60,14 @@
     background: rgba(35, 90, 60, 0.2);
     border-radius: 5px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
 .card {
     border: none;
     border-right: 4px solid rgb(35, 90, 60);
+    margin-bottom: 10px;
     width: 48%;
 }
 
